{
    "name": "New Actions",
    "maps": [
        {
            "name": "New action map",
            "id": "0f745513-c5e8-42d0-822b-d168ce4db089",
            "actions": [
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "d71fea46-b13f-40f1-89a6-4815196e3e57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "2b41f10d-bfc6-4b26-a6ff-2a7784ec5e5f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a97aa761-bc40-46f9-8887-be8fc2f1baa9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5544056a-54c1-41e9-89f9-b9f927b5d5cc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}